# SousVide-Semantic

./: .gitignore  .gitmodules  README.md  environment.yml  environment_x86.yml  pyproject.toml
configs/capture/: iphone15pro.json  semantic_iphone15pro.json
configs/course/: cluttered_env_track.json  cubicles.yml  extended_traj_track.json  flightroom_lowres.yml  hover.json  indooroutdoor.yml  infinity.json  inward_spiral.json  line.json  loiter_spin_0.00.json  loiter_spin_10.00.json  loiter_spin_12.00.json  loiter_spin_14.00.json  spheres.yml  (+27 more)
docs/: index.html
notebooks/: batch_flights.sh  create_gsplat.ipynb  create_policy.ipynb  figs_examples.ipynb  figs_examples_coruscant.ipynb  figs_gemsplat.ipynb  figs_ocp_solver.json  figs_scene_editing.ipynb  figs_sim_solver.json  figs_trajopt.ipynb  flight_command.py  flight_command_08_04_2025.py  flight_command_Onboard.py  flight_command_SSV_Onboard.py  flight_command_backup_07_31.py  flight_command_baseline.py  flight_command_baseline_mpc.py  flight_command_flight.py  flight_command_flight_curses.py  flight_command_old.py  flight_command_ros2.py  flight_command_simulator.py  flight_command_stable.py  review_flights.ipynb  run_benchmark.sh  run_flight_command.sh  simulate_trajectory.ipynb  sitecustomize.py  ssv_CLIPSEG_Zed_Debug.py  ssv_LOITER_CALIBRATE_TEST.py  ssv_ONNX_BENCHMARK.py  ssv_ONNX_BENCHMARK_backup.py  ssv_TEST_RANGE.py  ssv_TEST_ZED_RANGE.py  ssv_muilti3dgs_campaign_coruscant.py  ssv_multi3dgs_campaign.ipynb  ssv_multi3dgs_campaign.py  ssv_multi3dgs_campaign_coruscant.ipynb  sv_cluttered.ipynb  sv_examples.ipynb  (+5 more)
(+121 files in other folders)
